# stm32-usb.rs

firmware/usb_bootloader/: Cargo.toml  bootstrap
firmware/usb_bootloader/src/: ghost_fat.rs
firmware/usbd_bulk_only_transport/: Cargo.toml  test
firmware/usbd_mass_storage/: Cargo.toml
firmware/usbd_scsi/: Cargo.toml
