[package]
name = "usbd_mass_storage"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"
description = "usb-device implementation that provides a USB mass storage class device"
categories = ["embedded"]
keywords = ["usb", "embedded", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cs2dsb/stm32-usb.rs"
readme = "README.md"
documentation = "https://docs.rs/usbd_mass_storage"
homepage = "https://github.com/cs2dsb/stm32-usb.rs/tree/master/firmware/usbd_mass_storage"

[dependencies]
usb-device    = "0.3.1"
embedded-hal  = "0.2.7"
nb            = "1.1.0"
typenum       = "1.17.0"
itm_logger    = { version = "0.1.2", default-features = false }
packing       = { version = "0.2.0", path = "../packing/packing" }

[features]
trace-usb-control = []
trace-all = [ "trace-usb-control" ]
